home design, add users, add candidates, tables, modals, cards

--- a/src/main/resources/templates/errors/404.html
+++ b/src/main/resources/templates/errors/404.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h1 class="mb-4 text-center text-danger">Acceso denegado</h1>
+    <h1 class="mb-4 text-center">Aqui no hay nada</h1>
     <div class="mx-auto mb-4 text-center">
         <img th:src="@{/img/easter.gif}"/>
     </div>
-    <h3 class="mb-4 text-center text-muted fw-bolder">No tiene permisos para ingresar a esta sección.</h3>
+    <h3 class="mb-4 text-center text-muted fw-bolder">No se ha encontrado el recurso que estas buscando.</h3>
     <div class="text-center">
         <a class="btn btn-primary" th:href="@{/home}">Regresar</a>
     </div>
