user interface created

--- a/src/main/resources/templates/fragments/cards.html
+++ b/src/main/resources/templates/fragments/cards.html
@@ -4,16 +4,16 @@
 <body>
 
 <div class="card shadow text-center" th:fragment="card(title, description, image, votesUp, votesDown)" style="width: 100%; height: 90%">
-  <div class="card-header d-flex justify-content-around">
-    <button th:text="${votesUp}">^</button>
+  <div class="card-header d-flex justify-content-around" style="height: 4rem; overflow: hidden;">
+    <button class="btn btn-success" th:text="${votesUp}"></button>
     <span class="fw-bold" th:text="${title}"></span>
-    <button th:text="${votesDown}">v</button>
+    <button class="btn btn-danger" th:text="${votesDown}"></button>
   </div>
-  <div class="d-flex justify-content-center p-2">
-    <img th:src="'data:image/png;base64,' + ${image}" class="card-img-top" alt="cadidate image" style="width: 8rem; height: 8rem;">
-  </div>
-  <div class="card-body p-2" style="overflow-y: hidden;">
-    <p class="card-text" th:text="${description}"></p>
+  <div class="card-body" style="overflow:hidden;">
+      <img th:src="'data:image/png;base64,' + ${image}" class="image" alt="cadidate image">
+    <div class="text-container bg-ligth">
+      <p class="card-text text" th:text="${description}"></p>
+    </div>
   </div>
 </div>
 </body>
