--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -3,8 +3,10 @@
 <head th:replace="fragments/basic :: head"></head>
 <body>
 
-<div th:fragment="admin" class="container-fluid px-5 d-flex flex-column justify-content-center" style="height: 90vh;">
-    <div class="m-0" style="height: 50vh; overflow: scroll;
+<div th:fragment="admin" class="container-fluid px-5 d-flex flex-column justify-content-center" style="height: 85vh;">
+    <div class="m-0" style="height: 48vh;
+        overflow-x: hidden;
+        overflow-y: scroll;
         display: grid;
         grid-gap: 10px;
         grid-template-columns: repeat( auto-fit, minmax(16rem, 1fr) );">
@@ -12,6 +14,7 @@
             <div th:replace="fragments/cards :: card(${candidate.title}, ${candidate.description}, ${candidate.image}, ${candidate.votesUp}, ${candidate.votesDown})"></div>
         </div>
     </div>
+    <hr>
     <div class="row justify-content-evenly">
         <div th:replace="fragments/tables :: users"></div>
         <div th:replace="fragments/tables :: candidates"></div>
