--- a/src/main/resources/templates/fragments/cards.html
+++ b/src/main/resources/templates/fragments/cards.html
@@ -3,14 +3,14 @@
 <head th:replace="fragments/basic :: head"></head>
 <body>
 
-<div class="card shadow text-center" th:fragment="card(title, description, image, votesUp, votesDown)" style="width: 100%; height: 90%">
+<div class="card shadow text-center" th:fragment="card(title, description, image, imageType, votesUp, votesDown)" style="width: 100%; height: 90%">
   <div class="card-header d-flex justify-content-around" style="height: 4rem; overflow: hidden;">
         <button th:if="${!currentUser.getRol().getName().equalsIgnoreCase('ADMIN')}" class="btn btn-success" th:text="${votesUp}"></button>
         <span class="d-flex flex-column justify-content-center"><p class="fw-bold m-0" th:text="${title}"></p></span>
         <button th:if="${!currentUser.getRol().getName().equalsIgnoreCase('ADMIN')}" class="btn btn-danger" th:text="${votesDown}"></button>
   </div>
   <div class="card-body d-flex flex-column justify-content-center" style="overflow:hidden;">
-    <img th:src="'data:image/png;base64,' + ${image}" class="image" alt="cadidate image">
+    <img th:src="'data:' +${imageType} +';base64,' + ${image}" class="image" alt="cadidate image">
     <div class="text-container bg-ligth">
       <p class="card-text text" th:text="${description}"></p>
     </div>
