Edit, delete candidates and some minor fixed

--- a/src/main/resources/templates/fragments/basic.html
+++ b/src/main/resources/templates/fragments/basic.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link th:href="@{/css/styles.css}" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <scri th:href="@{/js/modals.js}"></scri>
 </head>
 <body>
     <header th:fragment="header" class="text-center mb-3">
-        <nav class="navbar navbar-expand-md bg-info py-2">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-md py-2">
             <div class="container-fluid">
-                <a class="navbar-brand fw-bolder" href="#">Choose41</a>
+                <a class="navbar-brand fw-bold" href="#">Choose41</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
