--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -11,16 +11,18 @@
         grid-gap: 10px;
         grid-template-columns: repeat( auto-fit, minmax(16rem, 1fr) );">
         <div class="px-3 d-flex flex-column justify-content-center" th:each="candidate: ${candidates}" style="width: 20%rem; min-width: 16rem;">
-            <div th:replace="fragments/cards :: card(${candidate.title}, ${candidate.description}, ${candidate.image}, ${candidate.imageType}, ${candidate.votesUp}, ${candidate.votesDown})"></div>
+            <div th:replace="fragments/cards :: card(${candidate.id}, ${candidate.title}, ${candidate.description}, ${candidate.image}, ${candidate.imageType}, ${candidate.votesUp}, ${candidate.votesDown})"></div>
         </div>
     </div>
     <hr>
     <div class="row justify-content-evenly">
+        <div id="editCandidateFlag" th:text="${editModal}" hidden></div>
         <div th:replace="fragments/tables :: users"></div>
         <div th:replace="fragments/tables :: candidates"></div>
     </div>
     <div th:replace="fragments/modals :: addUserModal"></div>
     <div th:replace="fragments/modals :: addCandidateModal"></div>
+    <div th:replace="fragments/modals :: editCandidateModal"></div>
 </div>
 
 <div th:fragment="user" class="container-fluid px-5 d-flex flex-column justify-content-center" style="height: 90vh;">
@@ -31,7 +33,7 @@
         grid-gap: 10px;
         grid-template-columns: repeat( auto-fit, minmax(16rem, 1fr) );">
             <div class="px-3 d-flex flex-column justify-content-center" th:each="candidate: ${candidates}" style="width: 19%rem; min-width: 16rem; max-width: 21%">
-                <div th:replace="fragments/cards :: card(${candidate.title}, ${candidate.description}, ${candidate.image}, ${candidate.imageType}, ${candidate.votesUp}, ${candidate.votesDown})"></div>
+                <div th:replace="fragments/cards :: card(${candidate.id}, ${candidate.title}, ${candidate.description}, ${candidate.image}, ${candidate.imageType}, ${candidate.votesUp}, ${candidate.votesDown})"></div>
             </div>
         </div>
     </div>
@@ -43,7 +45,7 @@
         grid-gap: 10px;
         grid-template-columns: repeat( auto-fit, minmax(16rem, 1fr) );">
             <div class="px-3 d-flex flex-column justify-content-center" th:each="candidate: ${currentUser.getCandidate()}" style="width: 19%rem; min-width: 16rem; max-width: 21%">
-                <div th:replace="fragments/cards :: card(${candidate.title}, ${candidate.description}, ${candidate.image}, ${candidate.imageType},  ${candidate.votesUp}, ${candidate.votesDown})"></div>
+                <div th:replace="fragments/cards :: card(${candidate.id}, ${candidate.title}, ${candidate.description}, ${candidate.image}, ${candidate.imageType},  ${candidate.votesUp}, ${candidate.votesDown})"></div>
             </div>
         </div>
     </div>
